<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Easy Bill Split</string>
    <string name="group_select_activity_name">Select Group</string>
    <string name="create_group_name">New Group</string>
    <string name="new_group">New Group</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_item_create">Add Items</string>
    <string name="title_activity_bill_final_action">Add Tax and Tip</string>
    <string name="title_activity_bill_output">Your Bill</string>
    <string name="title_activity_person_bill">PersonBillActivity</string>
    <string name="currency">$</string>
    <string name="percent">%</string>
    <string name="total">Total:</string>
    <string name="tip">Tip:</string>
    <string name="tax">Tax:</string>
    <string name="include_tax">Include Tax:</string>
    <string name="include_tip">Include Tip:</string>
    <string name="tip_after_tax">Tip after Tax:</string>
    <string name="calculate">Calculate</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="continue_text">Continue</string>
    <string name="add">Add</string>
    <string name="single">Single</string>
    <string name="shared">Shared</string>
    <string name="price">Price</string>
    <string name="item_name">Item name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="me">Me</string>
    <string name="none_selected">You have not selected anyone yet.</string>
    <string name="group_name_dialog">Name the Group</string>
    <string name="import_contacts">Import from Contacts</string>
    <string name="group_save">Would you like to save this group?</string>
    <string name="view">View</string>
    <string name="text">Text Bill</string>
    <string name="sub_total">Subtotal:</string>
    <string name="select_group">Select a group to start with:</string>
    <string name="no_groups">You have no saved groups.</string>
    <string name="simple_split">Simple Split</string>
    <string name="title_activity_simple_splitter">Simple Splitter</string>
    <string name="invalid_item">The item you entered has an invalid property.</string>
    <string name="invalid_property">A field you entered has an invalid entry.</string>
    <string name="name_hint">Enter a name</string>
    <string name="person_number_default">2</string>
    <string name="amount_default">0</string>
    <string name="number_people"># of People:</string>
    <string name="tip_default">15</string>
    <string name="result_default">0.00</string>
    <string name="per_person">Per Person:</string>
    <string name="search_hint">Search contacts</string>
</resources>
