<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:hint="@string/item_name"
        android:id="@+id/item_name"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords" />
    <Spinner
        android:id="@+id/item_member_join"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="@string/price"
        android:id="@+id/item_price"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/add_item_btn"
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>