<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:hint="@string/item_name"
        android:id="@+id/item_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/person_dropdownlist"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
        <Spinner
            android:layout_below="@id/person_dropdownlist"
            android:layout_marginTop="-20dp"
            android:clickable="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <EditText
        android:hint="@string/price"
        android:id="@+id/item_price"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/add_item_btn"
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>